Revision history for Perl extension App::Info.

0.23
      - Fixed tests that check Apache info events so that they ignore the name
        of the Apache executable. Thanks to Dave Rolsky for the spot.

0.22  Wed Jul  3 17:31:53 2002
      - Fixed tests that use Handler::Prompt so that they fake it into
        always thinking there's a TTY.

0.21  Tue Jul  2 19:14:44 2002
      - Fixed bug in Handler::Prompt where the prompt failed to simply
        return when the user accepted the default value (with confirm
        events).
      - Changed email address in AUTHOR section so that it's a link.
      - Added tests for confirm events.

0.20  Thu Jun 27 20:28:34 2002
      - Major upgrade. Some backwards compatibility broken. Namely, the
        error parameter no longer exists. See event handling instead.
      - Added App::Info::Handler. Classes derived from this class handle
        events triggered by App::Info subclasses.      
      - Added event handling methods to App::Info base class. The methods
        are on_info(), on_error(), on_unknown(), and on_confirm(). They
        have constructor parameters, too, of the same names. Pass in a
        list of event handlers to any one of these methods to handle
        events of that type.
      - Added example event handling classes. They are
        App::Info::Handler::Carp, App::Info::Handler::Print, and
        App::Info::Handler::Prompt. Objects of these classes may be passed
        to any of the event handling methods listed above.
      - Added App::Info::Request. Objects of this class are passed to event
        handler objects' handler() method as the sole argument. The request
        object holds significant information about the request so that a
        handler knows what to do with a a request.
      - Added protected event triggering methods to App::Info. These are
        info(), error(), unknown(), and confirm(). If a subclass calls one